@@ -20,6 +20,18 @@ We are still searching for a new logo for PMD for the next major release.
 
 Learn more about how to participate on [github issue 1663](https://github.com/pmd/pmd/issues/1663).
 
+#### Java 12 Support
+
+This release of PMD brings support for Java 12. PMD can parse the new [Switch Expressions](http://openjdk.java.net/jeps/325)
+and resolve the type of such an expression.
+
+Note: The Switch Expressions are a preview language feature of OpenJDK 12 and are not enabled by default. In order to
+analyze a project with PMD that uses these language features, you'll need to enable it via the new environment
+variable `PMD_JAVA_OPTS`:
+
+    export PMD_JAVA_OPTS=--enable-preview
+    ./run.sh pmd ...
+
 #### Quickstart Ruleset for Apex
 
 PMD provides now a quickstart ruleset for Salesforce.com Apex, which you can use as a base ruleset to
@@ -93,6 +105,8 @@ The designer will still be shipped with PMD's binaries.
 
 *   doc
     *   [#1721](https://github.com/pmd/pmd/issues/1721): \[doc] Documentation provides an invalid property configuration example
+*   java
+    *   [#1537](https://github.com/pmd/pmd/issues/1537): \[java] Java 12 support
 *   java-bestpractices
     *   [#1701](https://github.com/pmd/pmd/issues/1701): \[java] UseTryWithResources does not handle multiple argument close methods
 *   java-codestyle
@@ -109,6 +123,14 @@ The designer will still be shipped with PMD's binaries.
     *   [#1735](https://github.com/pmd/pmd/issues/1735): \[plsql] False-negatives for TO_DATE_TO_CHAR, TO_DATEWithoutDateFormat, TO_TIMESTAMPWithoutDateFormat
 
 ### API Changes
+
+#### Command Line Interface
+
+The start scripts `run.sh`, `pmd.bat` and `cpd.bat` support the new environment variable `PMD_JAVA_OPTS`.
+This can be used to set arbitrary JVM options for running PMD, such as memory settings (e.g. `PMD_JAVA_OPTS=-Xmx512m`)
+or enable preview language features (e.g. `PMD_JAVA_OPTS=--enable-preview`).
+
+The previously available variables such as `OPTS` or `HEAPSIZE` are deprecated and will be removed with PMD 7.0.0.
 
 #### Deprecated API
 
